# rocket-simulation

./: .gitignore  README.md  openrocket.csv  pyproject.toml
scripts/: analyze.py
