[project]
name = "rocket-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "pyqt6>=6.10.1",
    "ruff>=0.14.8",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
]
